# INCIDENT

./: .gitignore  Cargo.toml  TODO.md  _new_game.bat  continue.bat  default.sql  main.db  main.db-shm  main.db-wal  new_game.bat
assets/Cases/Case 1/Case details/: Autopsy  Chen Profile.txt  Crime Scene Report  Profiles.txt
assets/Cases/Case 1/Case details/Mediflow Systems/: Badge Access Log  MediFlow HR - Robert Zhang  Robert Zhang Interview  Robert Zhang Profile.txt
assets/Cases/Case 1/Case details/Riverside Towers/: Visitor Log - Oct 3  Witness Statement - David Kim  Witness Statement - Mike Torres
assets/Cases/Case 1/Case details/Victim chatlogs/: Chat with robert  Chat with sarah
assets/Cases/Case 1/Victim's Computer/: Work Notes.txt
assets/Chat/: CHAT_SCHEMA.md  dialogue.json  dialogue.schema.json  dialogue_backup.json  dialogue_gemini.json
assets/documents/Case details/: Autopsy  Profiles.txt  Victim Profile.txt  sample_document.txt
assets/documents/Chats/: Det. Rodriguez
assets/documents/On boarding/: Employee Handbook  Employment Contract  NDA  Offer Letter
dev_helper/: dialogue-editor.html  hasher.py
src/: animate.rs  data.rs  events.rs  game_state.rs  main.rs  menu_components.rs  sound.rs  terminal.rs  util.rs  views.rs  windows.rs
src/data/: chat.rs  docs.rs  player.rs
src/game_state/: endings.rs
src/views/: chat.rs  docs.rs  findings.rs  game.rs
src/views/docs/: contradictions.rs  notes.rs
