[package]
name = "INCIDENT"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
crossterm = "0.29.0"
env_logger = "0.11.9"
figleter = "0.2.2"
log = "0.4.29"
rand = "0.9.0"
rascii_art = "0.4.5"
ratatui = { version = "0.30.0", features = ["crossterm"] }
rodio = "0.21.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
strip-ansi-escapes = "0.2.1"
terminal_size = "0.4.3"
whoami = "2.1.1"
